--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,6 +3,7 @@
 @font-face {font-family: Pablo;src:url("../../font/TheScientist-L3EyW.ttf")  format("truetype");}
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 @import 'general';
+@import 'loader';
 @import 'nav';
 @import 'home';
 @import 'footer';
