--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -81,7 +81,8 @@ html {
   left: 0;
   right: 0;
   z-index: 99;
-  background-color: rgba(0, 0, 0, 0.555);
+  background: rgba(0, 0, 0, 0.555);
+  transition: 0.5s ease-in-out;
 }
 .nav .navContainer {
   max-width: 100%;
@@ -311,6 +312,12 @@ html {
 }
 .nav-mobile .is-active {
   top: 0;
+}
+
+.nav-scroll {
+  top: 0;
+  background: rgba(0, 0, 0, 0.8666666667);
+  transition: 0.5s ease-in-out;
 }
 
 .modal-carrito {
@@ -600,152 +607,29 @@ main .main_container .wabe img {
   vertical-align: bottom;
   filter: drop-shadow(-5px -5px 20px #000);
 }
-main .productosDestacados {
+main .productosDestacados, main .productosGenerales {
   position: relative;
   background-color: #fff;
   margin-bottom: 30px;
 }
-main .productosDestacados h3 {
+main .productosDestacados h3, main .productosGenerales h3 {
   font-size: 3rem;
   font-family: Logo;
   font-weight: 500;
   text-align: center;
   padding: 20px 0px 50px 0px;
 }
-main .productosDestacados .carrusel {
+main .productosDestacados .carrusel, main .productosGenerales .carrusel {
   position: relative;
 }
-main .productosDestacados .carrusel .destacados {
+main .productosDestacados .carrusel .destacados, main .productosGenerales .carrusel .destacados {
   position: relative;
   overflow: hidden;
   width: 100%;
   height: 22rem;
   padding-top: 1rem;
 }
-main .productosDestacados .carrusel .destacados .vinos {
-  position: relative;
-  width: 20rem !important;
-  height: 20rem !important;
-  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-}
-main .productosDestacados .carrusel .destacados .vinos .price {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  width: 110px;
-  height: 50px;
-  background-image: url("../../assets/price.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: 50%, 50%;
-  display: flex;
-  justify-content: end;
-  align-items: center;
-  z-index: 1;
-}
-main .productosDestacados .carrusel .destacados .vinos .price .precio {
-  color: rgb(255, 255, 255);
-  text-shadow: 0 0 10px #000000;
-  font-size: 1.2rem;
-  font-weight: bold;
-  z-index: 1;
-  padding-right: 8px;
-}
-main .productosDestacados .carrusel .destacados .vinos .button-shop-destacados {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  width: 35px;
-  height: 35px;
-  background: transparent;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  transition: all 300ms ease-out;
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-main .productosDestacados .carrusel .destacados .vinos .button-shop-destacados .icono-shop-destacados {
-  position: relative;
-  font-size: 2rem;
-  overflow: visible;
-  transition: all 300ms ease-out;
-}
-main .productosDestacados .carrusel .destacados .vinos .button-shop-destacados .cant-shop {
-  opacity: 0;
-  position: absolute;
-  top: -3px;
-  right: -3px;
-  width: 20px;
-  height: 20px;
-  border-radius: 50% 50%;
-  background-color: #ae3200;
-  color: #ffffff;
-}
-main .productosDestacados .carrusel .destacados .vinos .button-shop-destacados .cant-shop-active {
-  opacity: 1;
-}
-main .productosDestacados .carrusel .destacados .vinos .button-shop-destacados:hover {
-  transform: scale(1.1);
-}
-main .productosDestacados .carrusel .destacados .vinos .button-shop-destacados:hover .icono-shop-destacados {
-  transform: rotate(-5deg);
-  color: #460000;
-}
-main .productosDestacados .carrusel .destacados .vinos .vino_img {
-  width: 80%;
-  height: 80%;
-  transition: transform 300ms ease-out;
-}
-main .productosDestacados .carrusel .destacados .vinos .variedad_xs {
-  color: #9b9b9b;
-}
-main .productosDestacados .carrusel .destacados .vinos .nombre_xs {
-  font-size: 1.2rem;
-  font-weight: 300;
-}
-main .productosDestacados .carrusel .destacados .vinos:hover .vino_img {
-  transform: scale(1.02);
-}
-main .productosDestacados .carrusel .destacados .slaid {
-  display: none;
-  position: absolute;
-  color: rgb(0, 0, 0);
-  background-color: rgba(255, 255, 255, 0.6980392157);
-  width: 100%;
-  height: 100%;
-  top: 10%;
-  flex-direction: column;
-  justify-content: end;
-  align-items: center;
-  gap: 10px;
-  padding-bottom: 30px;
-  opacity: 0;
-  transition: all 0.5s ease;
-  cursor: pointer;
-}
-main .productosDestacados .carrusel .destacados .slaid .nombre {
-  text-align: center;
-  font-weight: 600;
-  font-size: 1.6rem;
-  font-style: italic;
-}
-main .productosDestacados .carrusel .destacados .slaid .variedad {
-  color: #676767;
-  font-size: 1.2rem;
-}
-main .productosDestacados .carrusel .destacados .slaid .bodega {
-  font-size: 1.4rem;
-}
-main .productosDestacados .carrusel .carrusel-anterior, main .productosDestacados .carrusel .carrusel-siguiente {
+main .productosDestacados .carrusel .carrusel-anterior, main .productosDestacados .carrusel .carrusel-siguiente, main .productosGenerales .carrusel .carrusel-anterior, main .productosGenerales .carrusel .carrusel-siguiente {
   position: absolute;
   z-index: 100;
   top: 50%;
@@ -758,21 +642,21 @@ main .productosDestacados .carrusel .carrusel-anterior, main .productosDestacado
   outline: none;
   cursor: pointer;
 }
-main .productosDestacados .carrusel .carrusel-anterior .carrusel-arrow, main .productosDestacados .carrusel .carrusel-siguiente .carrusel-arrow {
+main .productosDestacados .carrusel .carrusel-anterior .carrusel-arrow, main .productosDestacados .carrusel .carrusel-siguiente .carrusel-arrow, main .productosGenerales .carrusel .carrusel-anterior .carrusel-arrow, main .productosGenerales .carrusel .carrusel-siguiente .carrusel-arrow {
   opacity: 0.5;
   font-size: 1.5rem;
   transition: opacity 0.5s;
 }
-main .productosDestacados .carrusel .carrusel-anterior:hover .carrusel-arrow, main .productosDestacados .carrusel .carrusel-siguiente:hover .carrusel-arrow {
+main .productosDestacados .carrusel .carrusel-anterior:hover .carrusel-arrow, main .productosDestacados .carrusel .carrusel-siguiente:hover .carrusel-arrow, main .productosGenerales .carrusel .carrusel-anterior:hover .carrusel-arrow, main .productosGenerales .carrusel .carrusel-siguiente:hover .carrusel-arrow {
   opacity: 1;
 }
-main .productosDestacados .carrusel .carrusel-anterior {
+main .productosDestacados .carrusel .carrusel-anterior, main .productosGenerales .carrusel .carrusel-anterior {
   left: 20px;
 }
-main .productosDestacados .carrusel .carrusel-siguiente {
+main .productosDestacados .carrusel .carrusel-siguiente, main .productosGenerales .carrusel .carrusel-siguiente {
   right: 20px;
 }
-main .productosDestacados .dots .glider-dot {
+main .productosDestacados .dots .glider-dot, main .productosGenerales .dots .glider-dot {
   display: block;
   width: 30px;
   height: 4px;
@@ -781,11 +665,19 @@ main .productosDestacados .dots .glider-dot {
   border-radius: 0;
   transition: opacity 0.5s;
 }
-main .productosDestacados .dots .glider-dot:hover {
+main .productosDestacados .dots .glider-dot:hover, main .productosGenerales .dots .glider-dot:hover {
   opacity: 1;
 }
-main .productosDestacados .dots .glider-dot.active {
+main .productosDestacados .dots .glider-dot.active, main .productosGenerales .dots .glider-dot.active {
   opacity: 1;
+}
+main .productosGenerales .generales {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(min(100%, 20rem), 1fr));
+  grid-auto-rows: 20rem;
+  gap: 1rem;
+  padding: 1rem;
+  justify-items: center;
 }
 main .contact-conten {
   display: flex;
@@ -976,6 +868,131 @@ main .contact-conten .form-contact .show {
   animation: showMensaje 5s;
 }
 
+.vinos {
+  position: relative;
+  width: 20rem !important;
+  height: 20rem !important;
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.vinos .price {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 110px;
+  height: 50px;
+  background-image: url("../../assets/price.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50%, 50%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  z-index: 1;
+}
+.vinos .price .precio {
+  color: rgb(255, 255, 255);
+  text-shadow: 0 0 10px #000000;
+  font-size: 1.2rem;
+  font-weight: bold;
+  z-index: 1;
+  padding-right: 8px;
+}
+.vinos .button-shop-destacados {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 35px;
+  height: 35px;
+  background: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: all 300ms ease-out;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.vinos .button-shop-destacados .icono-shop-destacados {
+  position: relative;
+  font-size: 2rem;
+  overflow: visible;
+  transition: all 300ms ease-out;
+}
+.vinos .button-shop-destacados .cant-shop {
+  opacity: 0;
+  position: absolute;
+  top: -3px;
+  right: -3px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50% 50%;
+  background-color: #ae3200;
+  color: #ffffff;
+}
+.vinos .button-shop-destacados .cant-shop-active {
+  opacity: 1;
+}
+.vinos .button-shop-destacados:hover {
+  transform: scale(1.1);
+}
+.vinos .button-shop-destacados:hover .icono-shop-destacados {
+  transform: rotate(-5deg);
+  color: #460000;
+}
+.vinos .vino_img {
+  width: 80%;
+  height: 80%;
+  transition: transform 300ms ease-out;
+}
+.vinos .variedad_xs {
+  color: #9b9b9b;
+}
+.vinos .nombre_xs {
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+.vinos:hover .vino_img {
+  transform: scale(1.02);
+}
+
+.slaid {
+  display: none;
+  position: absolute;
+  color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.6980392157);
+  width: 100%;
+  height: 100%;
+  top: 10%;
+  flex-direction: column;
+  justify-content: end;
+  align-items: center;
+  gap: 10px;
+  padding-bottom: 30px;
+  opacity: 0;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+.slaid .nombre {
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.6rem;
+  font-style: italic;
+}
+.slaid .variedad {
+  color: #676767;
+  font-size: 1.2rem;
+}
+.slaid .bodega {
+  font-size: 1.4rem;
+}
+
 .toastify {
   font-size: 0.8rem;
   text-align: center;
@@ -1091,33 +1108,33 @@ main .contact-conten .form-contact .show {
     align-self: flex-start;
     font-size: 8rem;
   }
-  main .productosDestacados h3 {
+  main .productosDestacados h3, main .productosGenerales h3 {
     font-size: 4.5rem;
   }
-  main .productosDestacados .carrusel .destacados .vino_img {
+  .vino_img {
     width: 100%;
     height: 100%;
   }
-  main .productosDestacados .carrusel .destacados .vinos {
+  .vinos {
     box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -5px;
   }
-  main .productosDestacados .carrusel .destacados .vinos .nombre_xs {
+  .vinos .nombre_xs {
     display: none;
   }
-  main .productosDestacados .carrusel .destacados .vinos .variedad_xs {
+  .vinos .variedad_xs {
     display: none;
   }
-  main .productosDestacados .carrusel .destacados .vinos:hover {
+  .vinos:hover {
     box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
   }
-  main .productosDestacados .carrusel .destacados .vinos:hover .slaid {
+  .vinos:hover .slaid {
     top: 0;
     opacity: 1;
   }
-  main .productosDestacados .carrusel .destacados .vinos:hover .vino_img {
+  .vinos:hover .vino_img {
     transform: scale(1.15);
   }
-  main .productosDestacados .carrusel .destacados .slaid {
+  .slaid {
     display: flex;
   }
 }
