--- a/sass/home.scss
+++ b/sass/home.scss
@@ -101,7 +101,7 @@ main{
             }
         }
     }
-    .productosDestacados{
+    .productosDestacados, .productosGenerales{
         position: relative;
         background-color: #fff;
         margin-bottom: 30px;
@@ -120,129 +120,6 @@ main{
                 width: 100%;
                 height: 22rem;
                 padding-top: 1rem;
-                .vinos{
-                    position: relative;
-                    width: 20rem !important;
-                    height: 20rem !important;
-                    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
-                    overflow: hidden;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                    margin: 0 auto;
-                    .price{
-                        position: absolute;
-                        top: 10px;
-                        right: 10px;
-                        width: 110px;
-                        height: 50px;
-                        background-image: url("../../assets/price.png");
-                        background-size: contain;
-                        background-repeat: no-repeat;
-                        background-position: 50%, 50%;
-                        display: flex;
-                        justify-content: end;
-                        align-items: center;
-                        z-index: 1;
-                        .precio{
-                            color: rgb(255, 255, 255);
-                            text-shadow: 0 0 10px #000000;
-                            font-size: 1.2rem;
-                            font-weight: bold;
-                            z-index: 1;
-                            padding-right: 8px;
-                        }
-                    }
-                    .button-shop-destacados{
-                        position: absolute;
-                        top: 10px;
-                        left: 10px;
-                        width: 35px;
-                        height: 35px;
-                        background: transparent;
-                        border: none;
-                        outline: none;
-                        cursor: pointer;
-                        transition: all 300ms ease-out;
-                        z-index: 1;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        .icono-shop-destacados{
-                            position: relative;
-                            font-size: 2rem;
-                            overflow: visible;
-                            transition: all 300ms ease-out;
-                        }
-                        .cant-shop{
-                            opacity: 0;
-                            position: absolute;
-                            top: -3px;
-                            right: -3px;
-                            width: 20px;
-                            height: 20px;
-                            border-radius: 50% 50%;
-                            background-color: $colorRed;
-                            color: #ffffff;
-                        }
-                        .cant-shop-active{
-                            opacity: 1;
-                        }
-                        &:hover{
-                            transform: scale(1.1);
-                        }
-                        &:hover .icono-shop-destacados{
-                            transform: rotate(-5deg);
-                            color: #460000;
-                        }
-                    }
-                    .vino_img{
-                        width: 80%;
-                        height: 80%;
-                        transition: transform 300ms ease-out;
-                    }
-                    .variedad_xs{
-                        color: #9b9b9b;
-                    }
-                    .nombre_xs{
-                        font-size: 1.2rem;
-                        font-weight: 300;
-                    }
-                    &:hover .vino_img{
-                        transform: scale(1.02);
-                    }
-                }
-                .slaid{
-                    display: none;
-                    position: absolute;
-                    color: rgb(0, 0, 0);
-                    background-color: #ffffffb2;
-                    width: 100%;
-                    height: 100%;
-                    top: 10%;
-                    flex-direction: column;
-                    justify-content: end;
-                    align-items: center;
-                    gap: 10px;
-                    padding-bottom: 30px;
-                    opacity: 0;
-                    transition: all 0.5s ease;
-                    cursor: pointer;
-                    .nombre{
-                        text-align: center;
-                        font-weight: 600;
-                        font-size: 1.6rem;
-                        font-style: italic;
-                    }
-                    .variedad{
-                        color: #676767;
-                        font-size: 1.2rem;
-                    }
-                    .bodega{
-                        font-size: 1.4rem;
-                    }
-                }
             }
             .carrusel-anterior,.carrusel-siguiente{
                 position: absolute;
@@ -290,6 +167,17 @@ main{
             }
         }
     }
+    .productosGenerales{
+        .generales{
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(min(100%,20rem),1fr));
+            grid-auto-rows: 20rem;
+            gap: 1rem;
+            padding: 1rem;
+            justify-items: center;
+        }
+    }
+
     .contact-conten{
         display: flex;
         flex-direction: column;
@@ -500,6 +388,129 @@ main{
                 animation: showMensaje 5s ;
             }
         }
+    }
+}
+.vinos{
+    position: relative;
+    width: 20rem !important;
+    height: 20rem !important;
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    .price{
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 110px;
+        height: 50px;
+        background-image: url("../../assets/price.png");
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: 50%, 50%;
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        z-index: 1;
+        .precio{
+            color: rgb(255, 255, 255);
+            text-shadow: 0 0 10px #000000;
+            font-size: 1.2rem;
+            font-weight: bold;
+            z-index: 1;
+            padding-right: 8px;
+        }
+    }
+    .button-shop-destacados{
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        width: 35px;
+        height: 35px;
+        background: transparent;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        transition: all 300ms ease-out;
+        z-index: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .icono-shop-destacados{
+            position: relative;
+            font-size: 2rem;
+            overflow: visible;
+            transition: all 300ms ease-out;
+        }
+        .cant-shop{
+            opacity: 0;
+            position: absolute;
+            top: -3px;
+            right: -3px;
+            width: 20px;
+            height: 20px;
+            border-radius: 50% 50%;
+            background-color: $colorRed;
+            color: #ffffff;
+        }
+        .cant-shop-active{
+            opacity: 1;
+        }
+        &:hover{
+            transform: scale(1.1);
+        }
+        &:hover .icono-shop-destacados{
+            transform: rotate(-5deg);
+            color: #460000;
+        }
+    }
+    .vino_img{
+        width: 80%;
+        height: 80%;
+        transition: transform 300ms ease-out;
+    }
+    .variedad_xs{
+        color: #9b9b9b;
+    }
+    .nombre_xs{
+        font-size: 1.2rem;
+        font-weight: 300;
+    }
+    &:hover .vino_img{
+        transform: scale(1.02);
+    }
+}
+.slaid{
+    display: none;
+    position: absolute;
+    color: rgb(0, 0, 0);
+    background-color: #ffffffb2;
+    width: 100%;
+    height: 100%;
+    top: 10%;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+    gap: 10px;
+    padding-bottom: 30px;
+    opacity: 0;
+    transition: all 0.5s ease;
+    cursor: pointer;
+    .nombre{
+        text-align: center;
+        font-weight: 600;
+        font-size: 1.6rem;
+        font-style: italic;
+    }
+    .variedad{
+        color: #676767;
+        font-size: 1.2rem;
+    }
+    .bodega{
+        font-size: 1.4rem;
     }
 }
 .toastify{
